update application.properties configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,20 @@
+#Database configuration local/secrets
 spring.config.import = env.properties
+# Datasource configuration
 spring.datasource.url = ${DB_URL}
 spring.datasource.username = ${DB_USERNAME}
 spring.datasource.password = ${DB_PASSWORD}
+# Hibernate behaviour
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.hibernate.ddl-auto= create
+#Turn Statistics on
+logging.level.org.hibernate.stat= trace
+# Enable logging
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization= true
+spring.sql.init.mode=always
+#swagger
+springdoc.swagger-ui.operationsSorter=method
+
+
+
