--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.jpa.defer-datasource-initialization= true
 spring.sql.init.mode=always
 #swagger
 springdoc.swagger-ui.operationsSorter=method
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://lemur-3.cloud-iam.com/auth/realms/humansvszombies
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://lemur-3.cloud-iam.com/auth/realms/humansvszombies/protocol/openid-connect/certs
 
 
 
