Feat: env setup for default/dev/demo

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -1,22 +1,14 @@
-# Database configuration local/secrets
-spring.config.import = env.properties
-# Datasource configuration
-spring.datasource.url = ${DB_URL}
-spring.datasource.username = ${DB_USERNAME}
-spring.datasource.password = ${DB_PASSWORD}
 # Hibernate behaviour
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= create
 # Turn Statistics
 spring.jpa.properties.hibernate.generate_statistics=false
-logging.level.org.hibernate.stat= info
+logging.level.org.hibernate.stat= warn
 # Enable logging
-logging.level.sql=trace
+logging.level.sql=warn
+logging.level.noroff.project=warn
 # SQL data load
 spring.jpa.defer-datasource-initialization= true
 spring.sql.init.mode=always
-# Swagger
-springdoc.swagger-ui.operationsSorter=method
 # Auth
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://lemur-3.cloud-iam.com/auth/realms/humansvszombies
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://lemur-3.cloud-iam.com/auth/realms/humansvszombies/protocol/openid-connect/certs
