--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -4,6 +4,7 @@ spring.datasource.password = ${DEMO_DB_PASSWORD}
 spring.datasource.name = hvz-db
 
 # Hibernate behaviour
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= create
 # Turn Statistics
 spring.jpa.properties.hibernate.generate_statistics=false
@@ -14,6 +15,8 @@ logging.level.noroff.project=warn
 # SQL data load
 spring.jpa.defer-datasource-initialization= true
 spring.sql.init.mode=always
+# Swagger
+springdoc.swagger-ui.operationsSorter=method
 # Auth
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://lemur-3.cloud-iam.com/auth/realms/humansvszombies
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://lemur-3.cloud-iam.com/auth/realms/humansvszombies/protocol/openid-connect/certs
