--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = ${DEMO_DB_URL}
+spring.datasource.url = jdbc:postgresql://${DEMO_DB_URL}
 spring.datasource.username = ${DEMO_DB_USERNAME}
 spring.datasource.password = ${DEMO_DB_PASSWORD}
 spring.datasource.name = hvz-db
