--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-bootJar {
+jar {
 	manifest {
 		attributes(
-				'Start-Class': 'noroff.project.hvz.HvzApplication'
+				'Main-Class': 'org.springframework.noroff.project.hvz.HvzApplication'
 		)
 	}
 }
