--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 jar {
 	manifest {
 		attributes(
-				'Main-Class': 'org.springframework.noroff.project.hvz.HvzApplication'
+				'Main-Class': 'noroff.project.hvz.HvzApplication'
 		)
 	}
 }
