Modify docker-compose env variables

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,9 +8,6 @@ services:
       - db
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/compose-postgres
-      - SPRING_DATASOURCE_USERNAME=compose-postgres
-      - SPRING_DATASOURCE_PASSWORD=compose-postgres
     ports:
         - "8080:8080"
 
@@ -18,5 +15,5 @@ services:
     image: 'postgres:15.2-alpine'
     container_name: hvz-db
     environment:
-      - POSTGRES_USER=compose-postgres
-      - POSTGRES_PASSWORD=compose-postgres
+      - POSTGRES_USER=${PROD_DB_USERNAME}
+      - POSTGRES_PASSWORD=${PROD_DB_PASSWORD}
