update env properties (hard coded auth urls to vars)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.sql.init.mode=always
 # Swagger
 springdoc.swagger-ui.operationsSorter=method
 # Auth
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://lemur-3.cloud-iam.com/auth/realms/humansvszombies
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://lemur-3.cloud-iam.com/auth/realms/humansvszombies/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${JWT_ISSUER_URI}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWT_VERIFY_URI}
 
 
 
