--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/com.google.guava/guava
 	implementation 'com.google.guava:guava:31.1-jre'
+
+	testRuntimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
